--- a/htmlcss/htmlCssCourse.html
+++ b/htmlcss/htmlCssCourse.html
@@ -9,6 +9,118 @@
     <script src='main.js'></script>
 </head>
 <body>
-    
+<div class="container">
+    <div class="course">
+    <h1>HTML</h1>
+    <h3>Chapter 1:</h3>
+    <ul>
+        <li>HTML Overiew</li>
+        <li>HTML Editors</li>
+        <li>HTML Basic</li>
+        <li>HTML Head / favicon /  Page Title</li>
+        <li>HTML Elements / Attributes</li>
+        <li>HTML Headings</li>
+        <li>HTML Paragraphs</li>
+        <li>HTML Styles</li>
+        <li>Quiz</li>
+        <li>Test</li>
+    </ul>
+    <h3>Chapter 2:</h3>
+    <ul>
+        <li>HTML Text Formatting</li>
+        <li>HTML Comments</li>
+        <li>HTML Links</li>
+        <li>HTML Images</li>    
+        <li>HTML Tables</li>
+        <li>HTML Lists</li>
+        <li>HTML Block and Inline Elements</li>
+        <li>Quiz</li>
+        <li>Test</li>
+    </ul>
+    <h3>Chapter 3:</h3>
+    <ul>
+        <li>HTML Div Element</li>
+        <li>HTML class Attribute</li>
+        <li>HTML id Attribute</li>
+        <li>HTML Iframes</li>    
+        <li>HTML File Paths</li>
+        <li>HTML Layout Elements</li>
+        <li>HTML Semantic Elements</li>
+        <li>HTML Responsive</li>
+        <li>HTML Style Guide</li>
+        <li>Quiz</li>
+        <li>Test</li>
+    </ul>
+    <h3>Chapter 4:</h3>
+    <ul>
+        <li>HTML Symbols</li>
+        <li>Using Emojis in HTML</li>
+        <li>HTML Forms</li>
+        <li>HTML Canvas</li>    
+        <li>HTML Video / Audio</li>
+        <li>HTML Event Attributes</li>
+        <li>HTML Language Code / Country Code</li>
+        <li>Quiz</li>
+        <li>Test</li>
+    </ul>
+    </div>
+    <div class="course">
+        <h1>CSS</h1>
+        <h3>Chapter 1:</h3>
+        <ul>
+            <li>CSS Overiew</li>
+            <li>CSS Syntax</li>
+            <li>HTML Styles</li>
+            <li>CSS Selectors</li>
+            <li>CSS Comments</li>
+            <li>CSS Backgrounds</li>
+            <li>CSS Borders</li>
+            <li>CSS Margins</li>
+            <li>CSS Padding</li>
+            <li>Quiz</li>
+            <li>Test</li>
+        </ul>
+        <h3>Chapter 2:</h3>
+        <ul>
+            <li>CSS Height, Width and Max-width</li>
+            <li>CSS Box Model</li>
+            <li>CSS Outline</li>
+            <li>CSS Text</li>    
+            <li>CSS Fonts</li>
+            <li>CSS Icons</li>
+            <li>CSS Links</li>
+            <li>CSS Lists</li>
+            <li>CSS Tables</li>
+            <li>Quiz</li>
+            <li>Test</li>
+        </ul>
+        <h3>Chapter 3:</h3>
+        <ul>
+            <li>CSS Layout</li>
+            <li>HTML class Attribute</li>
+            <li>HTML id Attribute</li>
+            <li>HTML Iframes</li>    
+            <li>HTML File Paths</li>
+            <li>HTML Layout Elements</li>
+            <li>HTML Semantic Elements</li>
+            <li>HTML Responsive</li>
+            <li>HTML Style Guide</li>
+            <li>Quiz</li>
+            <li>Test</li>
+        </ul>
+        <h3>Chapter 4:</h3>
+        <ul>
+            <li>HTML Symbols</li>
+            <li>Using Emojis in HTML</li>
+            <li>HTML Forms</li>
+            <li>HTML Canvas</li>    
+            <li>HTML Video / Audio</li>
+            <li>HTML Event Attributes</li>
+            <li>HTML Language Code / Country Code</li>
+            <li>Quiz</li>
+            <li>Test</li>
+        </ul>
+        </div>
+</div>
 </body>
 </html>
