--- a/htmlcss/htmlCssCourse.html
+++ b/htmlcss/htmlCssCourse.html
@@ -96,31 +96,96 @@
         </ul>
         <h3>Chapter 3:</h3>
         <ul>
-            <li>CSS Layout</li>
-            <li>HTML class Attribute</li>
-            <li>HTML id Attribute</li>
-            <li>HTML Iframes</li>    
-            <li>HTML File Paths</li>
-            <li>HTML Layout Elements</li>
-            <li>HTML Semantic Elements</li>
-            <li>HTML Responsive</li>
-            <li>HTML Style Guide</li>
+            <li>CSS Display Layout</li>
+            <li>CSS Layout - The position</li>
+            <li>CSS Layout - The z-index</li>
+            <li>CSS Layout - Overflow</li>    
+            <li>CSS Layout - float and clear</li>
+            <li>CSS Layout - display: inline-block</li>
+            <li>CSS Layout - Horizontal & Vertical Align</li>
+            <li>CSS Combinators</li>
+            <li>CSS Pseudo-classes</li>
+            <li>CSS Pseudo-elements</li>
             <li>Quiz</li>
             <li>Test</li>
         </ul>
         <h3>Chapter 4:</h3>
         <ul>
-            <li>HTML Symbols</li>
-            <li>Using Emojis in HTML</li>
-            <li>HTML Forms</li>
-            <li>HTML Canvas</li>    
-            <li>HTML Video / Audio</li>
-            <li>HTML Event Attributes</li>
-            <li>HTML Language Code / Country Code</li>
+            <li>CSS Opacity / Transparency</li>
+            <li>CSS Navigation Bar</li>
+            <li>CSS Vertical Navigation Bar</li>
+            <li>CSS Dropdowns</li>    
+            <li>CSS Image Gallery</li>
+            <li>CSS Image Sprites</li>
+            <li>CSS Attribute Selectors</li>
+            <li>CSS The !important Rule</li>
+            <li>CSS Forms</li>
+            <li>CSS Math Functions</li>
             <li>Quiz</li>
             <li>Test</li>
         </ul>
-        </div>
+    </div>
+    <div class="course">
+        <h1>JAVASCRIPT</h1>
+        <h3>Chapter 1:</h3>
+        <ul>
+            <li>CSS Overiew</li>
+            <li>CSS Syntax</li>
+            <li>HTML Styles</li>
+            <li>CSS Selectors</li>
+            <li>CSS Comments</li>
+            <li>CSS Backgrounds</li>
+            <li>CSS Borders</li>
+            <li>CSS Margins</li>
+            <li>CSS Padding</li>
+            <li>Quiz</li>
+            <li>Test</li>
+        </ul>
+        <h3>Chapter 2:</h3>
+        <ul>
+            <li>CSS Height, Width and Max-width</li>
+            <li>CSS Box Model</li>
+            <li>CSS Outline</li>
+            <li>CSS Text</li>    
+            <li>CSS Fonts</li>
+            <li>CSS Icons</li>
+            <li>CSS Links</li>
+            <li>CSS Lists</li>
+            <li>CSS Tables</li>
+            <li>Quiz</li>
+            <li>Test</li>
+        </ul>
+        <h3>Chapter 3:</h3>
+        <ul>
+            <li>CSS Display Layout</li>
+            <li>CSS Layout - The position</li>
+            <li>CSS Layout - The z-index</li>
+            <li>CSS Layout - Overflow</li>    
+            <li>CSS Layout - float and clear</li>
+            <li>CSS Layout - display: inline-block</li>
+            <li>CSS Layout - Horizontal & Vertical Align</li>
+            <li>CSS Combinators</li>
+            <li>CSS Pseudo-classes</li>
+            <li>CSS Pseudo-elements</li>
+            <li>Quiz</li>
+            <li>Test</li>
+        </ul>
+        <h3>Chapter 4:</h3>
+        <ul>
+            <li>CSS Opacity / Transparency</li>
+            <li>CSS Navigation Bar</li>
+            <li>CSS Vertical Navigation Bar</li>
+            <li>CSS Dropdowns</li>    
+            <li>CSS Image Gallery</li>
+            <li>CSS Image Sprites</li>
+            <li>CSS Attribute Selectors</li>
+            <li>CSS The !important Rule</li>
+            <li>CSS Forms</li>
+            <li>CSS Math Functions</li>
+            <li>Quiz</li>
+            <li>Test</li>
+        </ul>
+    </div>
 </div>
 </body>
 </html>
